--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <style>
+    html,body {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
   <meta charset="utf-8">
   <title>PersonalWeb</title>
   <base href="/">
