--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
     }
   </style>
   <meta charset="utf-8">
-  <title>PersonalWeb</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+  <title>ManmeetKalra | Home</title>
 </head>
 <body>
   <app-root></app-root>
